Wed Nov 22 18:55:42 GMT 2006  Olly Betts <olly@survex.com>

	* xapian-config.in: Improve --version output so that help2man produces
	  a better man page.

Mon Nov 20 07:21:07 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Fix another off-by-one
	  error (> should be >=).

Mon Nov 20 07:12:11 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Fix off-by-one error in code
	  which calls my_fls().

Sat Nov 18 08:32:08 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: "const static" -> "static
	  const".

Sat Nov 18 08:05:17 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Make decode_interpolative
	  a member function of BitReader.

Sat Nov 18 07:45:19 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Add highly optimised fls()
	  implementation and make use of it.

Thu Nov 16 04:22:36 GMT 2006  Olly Betts <olly@survex.com>

	* m4/xapian.m4: If XAPIAN_CONFIG wasn't specified and xapian-config
	  wasn't found, see if the library seems to be present - if so give
	  a different error message which suggests the user needs to install
	  a -dev or -devel package.

Thu Nov 16 02:11:34 GMT 2006  Olly Betts <olly@survex.com>

	* docs/install.html: omega tarball is now xapian-omega.

Tue Nov 14 22:42:05 GMT 2006  Olly Betts <olly@survex.com>

	* tests/harness/Makefile: Add static Makefile so you can make all,
	  check, and clean from the subdirectory.
	* tests/harness/Makefile.mk: Ship Makefile.mk and Makefile.

Tue Nov 14 21:53:45 GMT 2006  Olly Betts <olly@survex.com>

	* tests/: Remove muscat36 temporary directories from svn:ignore
	  property.

Tue Nov 14 19:47:30 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac,tests/Makefile.am,tests/harness/Makefile.mk: Use
	  non-recursive make to build the test harness, so it only gets
	  built if "make check" is run.
